# iris-deployment-templates

./: .gitattributes  .gitignore  README.md  __main__.py  pyproject.toml
aws/fastapi/: .gitignore  Pulumi.yaml  README.md  docker-compose.yml  index.ts  package.json  pnpm-lock.yaml
aws/fastapi/app/: Dockerfile
aws/flask/: Pulumi.yaml  README.md  index.ts  package.json
irisheimer/: __init__.py
irisheimer/templates/aws/flask/: __main__.py
src/: pyproject.toml
src/irisheimer/: deploy.py
