[tool.poetry]
name = "irisheimer"
version = "0.1.0"
description = ""
authors = ["Varun Swaminathan <85042815+flerovious@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
irisheimer = "irisheimer:main"
