[tool.poetry]
name = "irisheimer"
version = "0.1.0"
description = "A Pulumi-based EC2 deployer with Docker Compose support for InterSystems WSGI apps."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.0"
pulumi-aws = "^5.0"
setuptools = "^75.1.0"

[tool.poetry.scripts]
deploy-app = "irisheimer.deploy:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
